@startuml

class Principal

class Teacher {
    + name
    + passportNumber
    + phoneNumber
    + email
    + status
    + salary
    + bonus
}

class Subject {
    + name
}

class Address {
    + city
    + street
    + house
    + apartment
    + zipCode
}

Principal .-down-> Teacher : hire or fire >
Teacher "1" o-- "1" Address : lives by >
Teacher "1" -- "many" Subject : teaches >

@enduml